crates/ruff_linter/src/rules/pyupgrade/snapshots/ruff_linter__rules__pyupgrade__tests__UP009_0.py.snap
---
source: crates/ruff_linter/src/rules/pyupgrade/mod.rs
---
UP009 [*] UTF-8 encoding declaration is unnecessary
 --> UP009_0.py:1:1
  |
1 | # coding=utf8
  | ^^^^^^^^^^^^^
2 |
3 | print("Hello world")
  |
help: Remove unnecessary coding comment
  |
1 - # coding=utf8
  |
