crates/ruff_linter/src/rules/pyupgrade/snapshots/ruff_linter__rules__pyupgrade__tests__UP009_1.py.snap
---
source: crates/ruff_linter/src/rules/pyupgrade/mod.rs
---
UP009 [*] UTF-8 encoding declaration is unnecessary
 --> UP009_1.py:2:1
  |
1 | #!/usr/bin/python
2 | # -*- coding: utf-8 -*-
  | ^^^^^^^^^^^^^^^^^^^^^^^
3 |
4 | print('Hello world')
  |
help: Remove unnecessary coding comment
  |
2 - # -*- coding: utf-8 -*-
  |
