crates/ruff_linter/src/rules/pyupgrade/snapshots/ruff_linter__rules__pyupgrade__tests__UP009_7.py.snap
---
source: crates/ruff_linter/src/rules/pyupgrade/mod.rs
---
UP009 [*] UTF-8 encoding declaration is unnecessary
 --> UP009_7.py:1:2
  |
1 |     # coding=utf8
  |     ^^^^^^^^^^^^^
2 | print("Hello world")
  |
help: Remove unnecessary coding comment
  |
1 -     # coding=utf8
  |
