crates/ruff_linter/src/rules/pyupgrade/snapshots/ruff_linter__rules__pyupgrade__tests__UP010.py.snap
---
source: crates/ruff_linter/src/rules/pyupgrade/mod.rs
---
[UP010]: [*] Unnecessary `__future__` imports `generators`, `nested_scopes` for target Python version
 --> UP010.py:1:1
  |
1 | from __future__ import nested_scopes, generators
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Remove unnecessary `__future__` import
2 | from __future__ import with_statement, unicode_literals
3 | from __future__ import absolute_import, division
  |

ℹ Safe fix
1   |-from __future__ import nested_scopes, generators
2 1 | from __future__ import with_statement, unicode_literals
3 2 | from __future__ import absolute_import, division
4 3 | from __future__ import generator_stop

[UP010]: [*] Unnecessary `__future__` imports `unicode_literals`, `with_statement` for target Python version
 --> UP010.py:2:1
  |
1 | from __future__ import nested_scopes, generators
2 | from __future__ import with_statement, unicode_literals
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Remove unnecessary `__future__` import
3 | from __future__ import absolute_import, division
4 | from __future__ import generator_stop
  |

ℹ Safe fix
1 1 | from __future__ import nested_scopes, generators
2   |-from __future__ import with_statement, unicode_literals
3 2 | from __future__ import absolute_import, division
4 3 | from __future__ import generator_stop
5 4 | from __future__ import print_function, generator_stop

[UP010]: [*] Unnecessary `__future__` imports `absolute_import`, `division` for target Python version
 --> UP010.py:3:1
  |
1 | from __future__ import nested_scopes, generators
2 | from __future__ import with_statement, unicode_literals
3 | from __future__ import absolute_import, division
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Remove unnecessary `__future__` import
4 | from __future__ import generator_stop
5 | from __future__ import print_function, generator_stop
  |

ℹ Safe fix
1 1 | from __future__ import nested_scopes, generators
2 2 | from __future__ import with_statement, unicode_literals
3   |-from __future__ import absolute_import, division
4 3 | from __future__ import generator_stop
5 4 | from __future__ import print_function, generator_stop
6 5 | from __future__ import invalid_module, generators

[UP010]: [*] Unnecessary `__future__` import `generator_stop` for target Python version
 --> UP010.py:4:1
  |
2 | from __future__ import with_statement, unicode_literals
3 | from __future__ import absolute_import, division
4 | from __future__ import generator_stop
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Remove unnecessary `__future__` import
5 | from __future__ import print_function, generator_stop
6 | from __future__ import invalid_module, generators
  |

ℹ Safe fix
1 1 | from __future__ import nested_scopes, generators
2 2 | from __future__ import with_statement, unicode_literals
3 3 | from __future__ import absolute_import, division
4   |-from __future__ import generator_stop
5 4 | from __future__ import print_function, generator_stop
6 5 | from __future__ import invalid_module, generators
7 6 | 

[UP010]: [*] Unnecessary `__future__` imports `generator_stop`, `print_function` for target Python version
 --> UP010.py:5:1
  |
3 | from __future__ import absolute_import, division
4 | from __future__ import generator_stop
5 | from __future__ import print_function, generator_stop
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Remove unnecessary `__future__` import
6 | from __future__ import invalid_module, generators
  |

ℹ Safe fix
2 2 | from __future__ import with_statement, unicode_literals
3 3 | from __future__ import absolute_import, division
4 4 | from __future__ import generator_stop
5   |-from __future__ import print_function, generator_stop
6 5 | from __future__ import invalid_module, generators
7 6 | 
8 7 | if True:

[UP010]: [*] Unnecessary `__future__` import `generators` for target Python version
 --> UP010.py:6:1
  |
4 | from __future__ import generator_stop
5 | from __future__ import print_function, generator_stop
6 | from __future__ import invalid_module, generators
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Remove unnecessary `__future__` import
7 |
8 | if True:
  |

ℹ Safe fix
3 3 | from __future__ import absolute_import, division
4 4 | from __future__ import generator_stop
5 5 | from __future__ import print_function, generator_stop
6   |-from __future__ import invalid_module, generators
  6 |+from __future__ import invalid_module
7 7 | 
8 8 | if True:
9 9 |     from __future__ import generator_stop

[UP010]: [*] Unnecessary `__future__` import `generator_stop` for target Python version
  --> UP010.py:9:5
   |
 8 | if True:
 9 |     from __future__ import generator_stop
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Remove unnecessary `__future__` import
10 |     from __future__ import generators
   |

ℹ Safe fix
6  6  | from __future__ import invalid_module, generators
7  7  | 
8  8  | if True:
9     |-    from __future__ import generator_stop
10 9  |     from __future__ import generators
11 10 | 
12 11 | if True:

[UP010]: [*] Unnecessary `__future__` import `generators` for target Python version
  --> UP010.py:10:5
   |
 8 | if True:
 9 |     from __future__ import generator_stop
10 |     from __future__ import generators
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Remove unnecessary `__future__` import
11 |
12 | if True:
   |

ℹ Safe fix
7  7  | 
8  8  | if True:
9  9  |     from __future__ import generator_stop
10    |-    from __future__ import generators
11 10 | 
12 11 | if True:
13 12 |     from __future__ import generator_stop

[UP010]: [*] Unnecessary `__future__` import `generator_stop` for target Python version
  --> UP010.py:13:5
   |
12 | if True:
13 |     from __future__ import generator_stop
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Remove unnecessary `__future__` import
14 |     from __future__ import invalid_module, generators
15 |     from __future__ import generators  # comment
   |

ℹ Safe fix
10 10 |     from __future__ import generators
11 11 | 
12 12 | if True:
13    |-    from __future__ import generator_stop
14 13 |     from __future__ import invalid_module, generators
15 14 |     from __future__ import generators  # comment

[UP010]: [*] Unnecessary `__future__` import `generators` for target Python version
  --> UP010.py:14:5
   |
12 | if True:
13 |     from __future__ import generator_stop
14 |     from __future__ import invalid_module, generators
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Remove unnecessary `__future__` import
15 |     from __future__ import generators  # comment
   |

ℹ Safe fix
11 11 | 
12 12 | if True:
13 13 |     from __future__ import generator_stop
14    |-    from __future__ import invalid_module, generators
   14 |+    from __future__ import invalid_module
15 15 |     from __future__ import generators  # comment

[UP010]: [*] Unnecessary `__future__` import `generators` for target Python version
  --> UP010.py:15:5
   |
13 |     from __future__ import generator_stop
14 |     from __future__ import invalid_module, generators
15 |     from __future__ import generators  # comment
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Remove unnecessary `__future__` import
   |

ℹ Unsafe fix
12 12 | if True:
13 13 |     from __future__ import generator_stop
14 14 |     from __future__ import invalid_module, generators
15    |-    from __future__ import generators  # comment
